arrumando algumas coisas

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Escolha uma Nuvem</h1>
+    <h1>Escolha uma Nuvem <span style="color: #ff4081;"><strong>meu bem</strong></span></h1>
     <div class="clouds">
       <div class="cloud" onclick="showMessage('Você é uma pessoa muito forte')"></div>
       <div class="cloud" onclick="showMessage('Eu te admiro demais')"></div>
