--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="cloud" onclick="showMessage('Eu te admiro demais')"></div>
       <div class="cloud" onclick="showMessage('Amo cada conversa, risada e assuntos aleatorios que você sempre me proporciona')"></div>
       <div class="cloud" onclick="showMessage('Em tão pouco tempo você se tornou uma pessoa muito especial pra mim')"></div>
-      <div class="cloud" onclick="showMessage('Nunca esquece o quanto você vale e da mulher incrivel que você é')"></div>
+      <div class="cloud" onclick="showMessage('Nunca se esqueça o quanto você vale e da mulher incrivel que você é')"></div>
     </div>
     <div class="message" id="message"></div>
     
